--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ Hire me to help you build a web application with a magical user experience.  -->
                     </div>
                   </div>
                   <p>
-                    E-Commerce App built using Next.js 14, SASS, Stripe, TypeScript, and CMS.
+                    E-Commerce App built using Next.js 14, SASS, Stripe, TypeScript, and Payload CMS.
                     It provides users with a seamless shopping experience, offering a wide range of products categorized for easy navigation. 
                     The app includes features such as a user-friendly interface for browsing, searching, and filtering items, a secure 
                     payment gateway for transactions, and much more.
@@ -272,6 +272,90 @@ Hire me to help you build a web application with a magical user experience.  -->
               </div>
             </li>
           <!-- 1 project end-->
+
+          <!-- 2 project-->
+          <li class="portfolio_li border_color_one">
+            <div class="flex_row">
+              <div class="portfolio_contents">
+                <h2>AI Article Summarizer</h2>
+                <div class="code_container">
+                  <div class="code">
+                    <img
+                      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original-wordmark.svg"
+                      alt="react"
+                      width="40"
+                      height="40"
+                    />
+                  </div>
+
+                  <div class="code">
+                    <img
+                      src="https://user-images.githubusercontent.com/25181517/187896150-cc1dcb12-d490-445c-8e4d-1275cd2388d6.png"
+                      alt="redux"
+                      width="40"
+                      height="40"
+                    />
+                  </div>
+
+                  <div class="code">
+                    <img
+                      src="https://user-images.githubusercontent.com/25181517/202896760-337261ed-ee92-4979-84c4-d4b829c7355d.png"
+                      alt="Tailwind CSS"
+                      width="40"
+                      height="40"
+                    />
+                  </div>
+                  <div class="code">
+                    <img
+                      src="./resources/images/OpenAI_Logo.svg.png"
+                      alt="Open AI"
+                      width="90"
+                      height="40"
+                    />
+                  </div>
+                  <div class="code">
+                    <img
+                      src="./resources/images/api-10.svg"
+                      alt="Open AI"
+                      width="40"
+                      height="40"
+                    />
+                  </div>
+                </div>
+                <p>
+                  An innovative web application leveraging the power of OpenAI GPT-4, React, 
+                  Tailwind  and Redux to provide users with quick and concise summaries of 
+                  articles. With AI Article, users can simply enter the URL of any article 
+                  they want summarized. AI Article empowers users to save time by obtaining 
+                  key insights from lengthy articles, making information consumption more 
+                  efficient and accessible.
+                </p>
+                <button>
+                  <a
+                    href="https://aitextarticle.netlify.app/"
+                    target="_blank"
+                  >
+                    <ion-icon name="open"></ion-icon>
+                    View project</a
+                  >
+                </button>
+                <button>
+                  <a
+                    href="https://github.com/Stephenice/AI_Articles_Summarize"
+                    target="_blank"
+                  >
+                    <ion-icon name="logo-github"></ion-icon> View code
+                  </a>
+                </button>
+              </div>
+
+              <figure class="portfolio-photo">
+                <img src="resources/images/ai2.PNG" alt="" />
+              </figure>
+            </div>
+          </li>
+
+          <!-- 2 project end-->
 
           <!-- 2 project-->
           <!-- <li class="portfolio_li border_color_one">
@@ -349,6 +433,10 @@ Hire me to help you build a web application with a magical user experience.  -->
           <!-- 3 project-->
           <li class="portfolio_li border_color_one">
             <div class="flex_row">
+              <figure class="portfolio-photo">
+                <img src="resources/images/travel2.jpg" alt="" />
+              </figure>
+
               <div class="portfolio_contents">
                 <h2>GoTravel Advisor</h2>
                 <div class="code_container">
@@ -404,9 +492,7 @@ Hire me to help you build a web application with a magical user experience.  -->
                 </button>
               </div>
 
-              <figure class="portfolio-photo">
-                <img src="resources/images/travel2.jpg" alt="" />
-              </figure>
+              
             </div>
           </li>
 
@@ -415,9 +501,9 @@ Hire me to help you build a web application with a magical user experience.  -->
           <!-- 4 project -->
           <li class="portfolio_li border_color">
             <div class="flex_row">
-              <figure class="portfolio-photo">
+              <!-- <figure class="portfolio-photo">
                 <img src="resources/images/p3.PNG" alt="" />
-              </figure>
+              </figure> -->
 
               <div class="portfolio_contents">
                 <h2>React Material-UI</h2>
@@ -492,6 +578,10 @@ Hire me to help you build a web application with a magical user experience.  -->
                   </a>
                 </button>
               </div>
+
+              <figure class="portfolio-photo">
+                <img src="resources/images/p3.PNG" alt="" />
+              </figure>
             </div>
           </li>
           <!-- 4 project end -->
@@ -499,6 +589,10 @@ Hire me to help you build a web application with a magical user experience.  -->
           <!-- 5 project-->
           <li class="portfolio_li border_color">
             <div class="flex_row">
+              <figure class="portfolio-photo">
+                <img src="resources/images/s5.jpg" alt="" />
+              </figure>
+
               <div class="portfolio_contents">
                 <h2>CodeLog</h2>
 
@@ -552,9 +646,9 @@ Hire me to help you build a web application with a magical user experience.  -->
                 </button>
               </div>
 
-              <figure class="portfolio-photo">
+              <!-- <figure class="portfolio-photo">
                 <img src="resources/images/s5.jpg" alt="" />
-              </figure>
+              </figure> -->
             </div>
           </li>
           <!-- 5 project end-->
