--- a/index.html
+++ b/index.html
@@ -466,6 +466,14 @@ Hire me to help you build a web application with a magical user experience.  -->
                       height="40"
                     />
                   </div>
+                  <div class="code">
+                    <img
+                      src="./resources/images/api-10.svg"
+                      alt="Open AI"
+                      width="40"
+                      height="40"
+                    />
+                  </div>
                 </div>
                 <p>
                   GoTravel Advisor is a web app helps traveler globally to
