--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Hire me to help you build a web application with a magical user experience.  -->
           <li class="portfolio_li border_color_one">
             <div class="flex_row">
               <div class="portfolio_contents">
-                <h2>AI Article Summarizer</h2>
+                <h2>SummarAI</h2>
                 <div class="code_container">
                   <div class="code">
                     <img
@@ -323,10 +323,10 @@ Hire me to help you build a web application with a magical user experience.  -->
                   </div>
                 </div>
                 <p>
-                  An innovative web application leveraging the power of OpenAI GPT-4, React, 
+                  An innovative AI web application leveraging the power of OpenAI GPT-4, React, 
                   Tailwind  and Redux to provide users with quick and concise summaries of 
-                  articles. With AI Article, users can simply enter the URL of any article 
-                  they want summarized. AI Article empowers users to save time by obtaining 
+                  articles. With SummarAI, users can simply enter the URL of any article 
+                  they want summarized. SummarAI empowers users to save time by obtaining 
                   key insights from lengthy articles, making information consumption more 
                   efficient and accessible.
                 </p>
