update blog contents

--- a/index.html
+++ b/index.html
@@ -728,17 +728,17 @@ Hire me to help you build a web application with a magical user experience.  -->
         </div>
 
         <div class="col span-1-of-2 box">
-          <img src="resources/images/web5.jpg" alt="" />
-          <h3>My JavaScirpt Snippets</h3>
+          <img src="resources/images/react_1.jpg" alt="" />
+          <h3>Do you know React Component, Instance, and Element?</h3>
           <div class="blog-feature date">
             <i class="ion-ios-calendar small"></i>
-            <span class="psmall">June 29, 2022</span>
+            <span class="psmall">April 06, 2024</span>
           </div>
           <div class="blog-feature">
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius ab,
-              perspiciatis maxime nesciunt maiores repudiandae corporis animi
-              enim saepe at aperiam quaerat eveniet, <a href="">Read more</a>
+              In this article, we will explore the fundamental concepts of React, gaining an understanding of React components, 
+              instances, and elements, which collectively form the building block of creating user interfaces (UI) 
+              in React. <a href="https://stephenice.hashnode.dev/do-you-know-react-component-instance-and-element" target="_blank">Read more</a>
             </p>
           </div>
         </div>
