--- a/index.html
+++ b/index.html
@@ -202,6 +202,90 @@ Hire me to help you build a web application with a magical user experience.  -->
 
       <div class="row">
         <ul class="portfolio-showcase">
+
+           <!-- 2 project-->
+           <li class="portfolio_li border_color_one">
+            <div class="flex_row">
+              <div class="portfolio_contents">
+                <h2>EatNow.com Food Ordering System</h2>
+                <div class="code_container">
+                  <div class="code">
+                    <img
+                      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original-wordmark.svg"
+                      alt="react"
+                      width="40"
+                      height="40"
+                    />
+                  </div>
+
+                  <div class="code">
+                    <img
+                      src="https://user-images.githubusercontent.com/25181517/183890598-19a0ac2d-e88a-4005-a8df-1ee36782fde1.png"
+                      alt="TypeScript"
+                      width="40"
+                      height="40"
+                    />
+                  </div>
+
+                  <div class="code">
+                    <img
+                      src="https://user-images.githubusercontent.com/25181517/187896150-cc1dcb12-d490-445c-8e4d-1275cd2388d6.png"
+                      alt="redux"
+                      width="40"
+                      height="40"
+                    />
+                  </div>
+
+                  <div class="code">
+                    <img
+                      src="https://user-images.githubusercontent.com/25181517/202896760-337261ed-ee92-4979-84c4-d4b829c7355d.png"
+                      alt="Tailwind CSS"
+                      width="40"
+                      height="40"
+                    />
+                  </div>
+                
+                  <div class="code">
+                    <img
+                      src="./resources/images/api-10.svg"
+                      alt="Open AI"
+                      width="40"
+                      height="40"
+                    />
+                  </div>
+                </div>
+                <p>
+                  An enterprise-level food ordering system (similar to justeat.com) that enables users to order food from 
+                  various restaurants. This system streamlines the live order status, payment transactions, and ensures order fulfillment. 
+                  Build using React, Typescript, MongoDB, Node, Tailwind CSS, Shadcn, React Hook Form, Auth0, Stripe, Cloudinary, and Render.
+                </p>
+                <button>
+                  <a
+                    href="https://mern-food-ordering-app-frontend-zw5w.onrender.com/"
+                    target="_blank"
+                  >
+                    <ion-icon name="open"></ion-icon>
+                    View project</a
+                  >
+                </button>
+                <button>
+                  <a
+                    href="https://github.com/Stephenice/Enterprise-Level-Food-Delivery-Platform"
+                    target="_blank"
+                  >
+                    <ion-icon name="logo-github"></ion-icon> View code
+                  </a>
+                </button>
+              </div>
+
+              <figure class="portfolio-photo">
+                <img src="resources/images/food.webp" alt="" />
+              </figure>
+            </div>
+          </li>
+
+          <!-- 2 project end-->
+
           <!-- 1 project-->
             <li class="portfolio_li border_color_one">
               <div class="flex_row">
