--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <li><a data-hover="Portfolio" href="#Portfolio">Portfolio</a></li>
             <li><a data-hover="Blog" href="#Blog">Blog</a></li>
             <li><a data-hover="Contact" href="#Contact">Contact</a></li>
+            <li><a class="scroll js--scroll-to-contact a-btn-cta" href="#">Hire Me</a></li>
           </ul>
 
           <!-- MOBLIE -->
@@ -134,7 +135,8 @@ Hire me to help you build a web application with a magical user experience.  -->
         </p>
       </div>
 
-      <div class="row">
+<!-- remove -->
+      <!-- <div class="row">
         <div class="col span-1-of-4 box js--wp-1">
           <i class="ion-ios-checkmark-circle-outline icon-big"></i>
 
@@ -155,10 +157,11 @@ Hire me to help you build a web application with a magical user experience.  -->
           </p>
         </div>
         <div class="col span-1-of-4 box js--wp-3">
-          <i class="ion-ios-laptop icon-big"></i>
+          <i class="ion-ios-laptop icon-big"></i> -->
+
           <!-- Team Player -->
 
-          <h3 class="h3-about">Responsive</h3>
+          <!-- <h3 class="h3-about">Responsive</h3>
           <p>
             Creating products that respond to the user’s behavior and
             environment based on their devices (on screen size, platform, and
@@ -173,14 +176,13 @@ Hire me to help you build a web application with a magical user experience.  -->
             convenient, saves time, energy and reduces human labor.
           </p>
         </div>
-      </div>
+      </div> -->
 
+<!-- end remove -->
       <div class="row">
         <ul class="btn">
           <li>
-            <a class="a-btn-a scroll js--scroll-to-portfolio" href="#"
-              >My Work</a
-            >
+            <a class="a-btn-a scroll js--scroll-to-portfolio" href="#">My Work</a>
           </li>
           <li>
             <a class="a-btn-h scroll js--scroll-to-contact" href="#">Hire Me</a>
