--- a/index.html
+++ b/index.html
@@ -72,27 +72,32 @@
       <div class="banner-content">
         <h1>I'm Stephen Ijeh</h1>
         <h6>
-          A Software Developer who<br />
-          enjoys creating awesome web applications.
+          A Software Developer ready<br />
+          to bring your next big idea to reality.
+          <!-- enjoys creating awesome web applications. -->
+          <!--who I build websites and apps with  -->
           <!-- and<br> even magical user experience. -->
         </h6>
         <ul class="icon">
           <!-- <ion-icon name="logo-twitter"></ion-icon> -->
           <li>
+            <a href="https://www.linkedin.com/in/stephen-ijeh/" target="_blank">
+              <i class="ion-logo-linkedin"></i>
+            </a>
+          </li>
+          <!-- <li>
             <a href="https://twitter.com/IjehStephen" target="_blank"
               ><i class="ion-logo-twitter"></i
             ></a>
-          </li>
+          </li> -->
           <li>
             <a href="https://github.com/Stephenice" target="_blank"
               ><i class="ion-logo-github"></i
             ></a>
           </li>
           <li>
-            <a
-              href="mailto:stephencode@hotmail.com?Subject=Hello%20again"
-              target="_top"
-              ><i class="ion-logo-googleplus"></i
+            <a href="mailto:stephendev44@gmail.com?Subject=Hello%20again" target="_top">
+              <i class="ion-logo-googleplus"></i
             ></a>
           </li>
 
@@ -867,9 +872,9 @@ Hire me to help you build a web application with a magical user experience.  -->
       <div class="row center">
         <ul class="icon">
           <li>
-            <a href="https://twitter.com/IjehStephen" target="_blank"
-              ><i class="ion-logo-twitter"></i
-            ></a>
+            <a href="https://www.linkedin.com/in/stephen-ijeh/" target="_blank">
+              <i class="ion-logo-linkedin"></i>
+            </a>
           </li>
           <li>
             <a href="https://github.com/Stephenice" target="_blank"
@@ -878,7 +883,7 @@ Hire me to help you build a web application with a magical user experience.  -->
           </li>
           <li>
             <a
-              href="mailto:stephencode@hotmail.com?Subject=Hello%20again"
+              href="mailto:stephendev44@gmail.com?Subject=Hello%20again"
               target="_top"
               ><i class="ion-logo-googleplus"></i
             ></a>
