--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li class="active"><a data-hover="Home" href="#Home">Home</a></li>
             <li><a data-hover="About" href="#About">About</a></li>
             <li><a data-hover="Portfolio" href="#Portfolio">Portfolio</a></li>
-            <li><a data-hover="Blog" href="#Blog">Blog</a></li>
+            <!-- <li><a data-hover="Blog" href="#Blog">Blog</a></li> -->
             <li><a data-hover="Contact" href="#Contact">Contact</a></li>
             <li><a class="scroll js--scroll-to-contact a-btn-cta" href="#">Hire Me</a></li>
           </ul>
@@ -728,7 +728,7 @@ Hire me to help you build a web application with a magical user experience.  -->
 
     <div class="clearfix"></div>
     <!-- blog -->
-    <section class="section-blog" id="Blog">
+    <!-- <section class="section-blog" id="Blog">
       <div class="row">
         <div class="about-head one text-center">
           <h4>BLOGS</h4>
@@ -769,7 +769,7 @@ Hire me to help you build a web application with a magical user experience.  -->
               in React. <a href="https://stephenice.hashnode.dev/do-you-know-react-component-instance-and-element" target="_blank">Read more</a>
             </p>
           </div>
-        </div>
+        </div> -->
 
         <!-- <div class="col span-1-of-4 box">
                         <img src="resources/images/berlin.jpg" alt="">
@@ -784,14 +784,15 @@ Hire me to help you build a web application with a magical user experience.  -->
                     </div>
 
                         </div> -->
-      </div>
-    </section>
+
+      <!-- </div>
+    </section> -->
 
     <div class="clearfix"></div>
 
     <!-- contact -->
 
-    <section class="contact js--contact" id="Contact">
+    <section class="contact section-blog js--contact" id="Contact">
       <div class="row">
         <div class="about-head one text-center">
           <h4>GET IN TOUCH WITH ME</h4>
