--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             ></a>
           </li>
           <li>
-            <a href="mailto:stephendev44@gmail.com?Subject=Hello%20again" target="_top">
+            <a href="mailto:stephendev44@gmail.com?Subject=Web%20Information" target="_top">
               <i class="ion-logo-googleplus"></i
             ></a>
           </li>
@@ -884,7 +884,7 @@ Hire me to help you build a web application with a magical user experience.  -->
           </li>
           <li>
             <a
-              href="mailto:stephendev44@gmail.com?Subject=Hello%20again"
+              href="mailto:stephendev44@gmail.com?Subject=Web%20Information"
               target="_top"
               ><i class="ion-logo-googleplus"></i
             ></a>
