--- a/index.html
+++ b/index.html
@@ -118,21 +118,19 @@
         <p class="long-copy">
           <img
             class="photo-about"
-            src="resources/images/stev1.jpg"
+            src="resources/images/pro.jpeg"
             alt="profile picture"
           />
-          I'm Stephen, an energetic and motivated software developer with a
-          solid background in computer science and engineering. I am extremely
-          versatile, innovative, and enthusiastic web development specialist.<br />
+          I'm a results-driven software developer, with proven experience delivering software solutions using modern 
+          technologies: Javascript (ES6+), Typescript, React, Node, LWC, Apex, PHP, HTML, and CSS to build well-engineered, 
+          maintainable, testable, and scalable web application that elevate user experiences and drive business growth. 
+          I enjoy working in Agile environments that balance quality and delivery time.<br /><br />
 
-          As a software developer, I am focused on user experience satisfaction
-          using modern technologies Javascript (ES6+), React, Nest.js, Typescript, LWC, Apex, PHP, HTML and CSS to
-          build well-engineered, maintainable, testable, and scalable web
-          application. <br />
+          Motivated by curiosity, I decided to follow my long-time passion, tech. After graduating with a BSc in Computer Engineering, 
+          I started working as a Web Developer.<br /><br />
 
-          I have expericence in all aspects of the development process like
-          gathering information, planning, design, development, testing and
-          launching, maintenance and user support.
+          Currently, I work as a Web Developer at Upp, tasked with building and leading the development of our eCommerce platform. My responsibilities 
+          included system design, fixing time-sensitive bugs in high-security environments, and taking part in technical decisions over the future of our tech stack.
           <!-- <br>
 Hire me to help you build a web application with a magical user experience.  -->
 
